feat: crud completo
